fix padding for logo on small screens

--- a/src/components/ODALogo/ODALogo.module.css
+++ b/src/components/ODALogo/ODALogo.module.css
@@ -8,3 +8,8 @@
     display: none;
   }
 }
+@media (max-width: 1000px) {
+  .logo {
+    padding-bottom: 0px!important;
+  }
+}
